ol-Text area de posición X e Y

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Zombie Party</title>
 </head>
 <body>
+
+    <p>X:</p>
+    <textarea id="posX"></textarea>
+    <p>Y:</p>
+    <textarea id="posY"></textarea>
+
+    <label id="mostrarTabla">
+
+    </label>
     
     <script src="main.js">
     </script>
