--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <p>Y:</p>
     <textarea id="posY"></textarea>
 
-    <label id="mostrarTabla">
+    <p id="mostrarTabla">
 
-    </label>
+    </p>
     
     <script src="main.js">
     </script>
