OL - Añadir Tabla a partida.js

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <p id="mostrarTabla">
 
     </p>
-    
-    <script src="main.js">
-    </script>
+    <script src="Partida.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
