gmm - canvi textarea  a input

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 
     <p>X:</p>
-    <textarea id="posX"></textarea>
+    <input type="text" id="posX"></textarea>
     <p>Y:</p>
-    <textarea id="posY"></textarea>
+    <input type="text" id="posY"></textarea>
 
     <p id="mostrarTabla">
 
