gmm - reestructurament del codi de la taula

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 <body>
 
     <p>X:</p>
-    <input type="text" id="posX"></textarea>
+    <input type="text" id="posX">
     <p>Y:</p>
-    <input type="text" id="posY"></textarea>
+    <input type="text" id="posY">
+    <div id="mostrarTabla">
 
-    <p id="mostrarTabla">
-
-    </p>
+    </div>
     <script src="Partida.js"></script>
     <script src="main.js"></script>
 </body>
