--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <p>Y:</p>
     <input type="text" id="posY"></textarea>
 
-    <p id="mostrarTabla">
-
-    </p>
+    <p id="mostrarTabla"></p>
     <script src="Partida.js"></script>
     <script src="main.js"></script>
 </body>
