ol - recompensas,elements y funciones recompensas

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Zombie Party</title>
 </head>
 <body>
-
     <p>X:</p>
     <input type="text" id="posX">
     <p>Y:</p>
@@ -17,5 +16,11 @@
     </div>
     <script src="Partida.js"></script>
     <script src="main.js"></script>
+    <script src="Elements.js"></script>
+    <script src="Recompensas.js"></script>
+    <script src="Zombi.js"></script>
+    <script src="recompensa/DoblePunts.js"></script>
+    <script src="recompensa/MeitatZombis.js"></script>
+    <script src="recompensa/VidaExtra.js"></script>
 </body>
 </html>
