ol - añadiendo cosillas

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <input type="text" id="posX">
     <p>Y:</p>
     <input type="text" id="posY">
+    <button id="boton" text="introducir"></button>
     <div id="mostrarTabla">
 
     </div>
