ol - hacer que se muestren algunos elementos en la tabla en consola

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <input type="text" id="posX">
     <p>Y:</p>
     <input type="text" id="posY">
-    <button id="boton" text="introducir"></button>
+    <button id="boton" >Introducir</button>
     <div id="mostrarTabla">
 
     </div>
@@ -20,6 +20,7 @@
     <script src="Elements.js"></script>
     <script src="Recompensas.js"></script>
     <script src="Zombi.js"></script>
+    <script src="Estrella.js"></script>
     <script src="recompensa/DoblePunts.js"></script>
     <script src="recompensa/MeitatZombis.js"></script>
     <script src="recompensa/VidaExtra.js"></script>
