todo funciona ok

--- a/codigo/index.html
+++ b/codigo/index.html
@@ -14,11 +14,11 @@
 
                     <div id='x'>
                         <label>X</label><br>
-                        <input type="text" maxlength="1" size="1" id="xBoto">
+                        <input type="text" maxlength="1" size="1" id="posX">
                     </div>
                     <div id='y'>
                         <label>Y</label><br>
-                        <input type="text" maxlength="1" size="1" id="yBoto">
+                        <input type="text" maxlength="1" size="1" id="posY">
                     </div>
 
                 </div>
