gmm - empezando funcion de mostrar imagenes en vez de letras

--- a/codigo/index.html
+++ b/codigo/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="../estilo/style.css">
+        <link rel="stylesheet" href="../estilo/table.css">
         <title>Zombie Party</title>
     </head>
     <body>
@@ -32,7 +33,7 @@
                 </div>
             </div>
             <div id='createTable'>
-                <p class="center">Hola</p>
+                <p class="center"></p>
             </div>
             <div id="stats"></div>
 
