--- a/codigo/index.html
+++ b/codigo/index.html
@@ -16,11 +16,11 @@
 
                 <div id='x'>
                     <label>X</label><br>
-                    <input type="text" maxlength="2" size="1" id="posX">
+                    <input type="text" maxlength="2" size="1" id="posX" onchange="inputChangeX()">
                 </div>
                 <div id='y'>
                     <label>Y</label><br>
-                    <input type="text" maxlength="2" size="1" id="posY">
+                    <input type="text" maxlength="2" size="1" id="posY" onchange="inputChangeY()">
                 </div>
 
             </div>
