gmm - Retroceso tabla antigua + redimension imagenes

--- a/codigo/index.html
+++ b/codigo/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../estilo/style.css">
+    <link rel="stylesheet" href="../estilo/table.css">
     <title>Zombie Party</title>
 </head>
 
@@ -16,11 +17,11 @@
 
                 <div id='x'>
                     <label>X</label><br>
-                    <input type="text" maxlength="2" size="1" id="posY" onchange="inputChangeY()">
+                    <input type="text" maxlength="2" size="1" id="posX">
                 </div>
                 <div id='y'>
                     <label>Y</label><br>
-                    <input type="text" maxlength="2" size="1" id="posX" onchange="inputChangeX()">
+                    <input type="text" maxlength="2" size="1" id="posY">
                 </div>
 
             </div>
