--- a/codigo/index.html
+++ b/codigo/index.html
@@ -36,7 +36,7 @@
         <div id='createTable'>
             <p class="center"></p>
         </div>
-        <div id="stats"></div>
+        <div id="stats" class="center"></div>
 
     </div>
 
