gmm - empiezo un poco con el CSS de la página

--- a/codigo/index.html
+++ b/codigo/index.html
@@ -29,15 +29,19 @@
                 <div id="ins">
                     <button id="insBoto">Insereix</button>
                 </div>
+                <!--
                 <div id="abandona">
-                    <button>Abandona</button>
+                    <button id="abanBoto">Abandona</button>
                 </div>
+                -->
             </div>
         </div>
         <div id='createTable'>
             <p class="center"></p>
         </div>
-        <div id="stats"></div>
+        <div id="stats">
+            <div id="centerStats"></div>
+        </div>
 
     </div>
 
