gmm - más css y alguna corrección

--- a/codigo/index.html
+++ b/codigo/index.html
@@ -13,34 +13,50 @@
     <div id='body'>
 
         <div id='panel'>
-            <div id='coord'>
+            <div id='box'>
+                <div id='coord'>
 
-                <div id='x'>
-                    <label>X</label><br>
-                    <input type="text" maxlength="2" size="2" id="posX">
-                </div>
-                <div id='y'>
-                    <label>Y</label><br>
-                    <input type="text" maxlength="2" size="2" id="posY">
-                </div>
+                    <div id='x'>
+                        <label>X</label><br>
+                        <input type="text" maxlength="2" size="2" id="posX">
+                    </div>
+                    <div id='y'>
+                        <label>Y</label><br>
+                        <input type="text" maxlength="2" size="2" id="posY">
+                    </div>
 
-            </div>
-            <div id="botons">
-                <div id="ins">
-                    <button id="insBoto">Insereix</button>
                 </div>
-                <!--
-                <div id="abandona">
-                    <button id="abanBoto">Abandona</button>
+                <div id="botons">
+                    <div id="ins">
+                        <button id="insBoto">Insertar</button>
+                    </div>
+                    <div id="abandona">
+                        <button id="abanBoto">Abandonar</button>
+                    </div>
                 </div>
-                -->
             </div>
         </div>
         <div id='createTable'>
             <p class="center"></p>
         </div>
         <div id="stats">
-            <div id="centerStats"></div>
+            <div id="gStats">
+
+                <div id="sTitulo"></div>
+
+                <div id="puntos"></div>
+
+                <div id="infoPartida"></div>
+
+                <div id="global">
+
+                    <div id="gTitulo"></div>
+                    <div id="infoJuego"></div>
+
+                </div>
+
+            </div>
+
         </div>
 
     </div>
