--- a/codigo/index.html
+++ b/codigo/index.html
@@ -13,25 +13,30 @@
     <div id='body'>
 
         <div id='panel'>
-            <div id='box'>
-                <div id='coord'>
+            <div id='pBox'>
+                <div id='box'>
+                    <div id='coord'>
 
-                    <div id='x'>
-                        <label>X</label><br>
-                        <input type="text" maxlength="1" size="2" id="posX">
-                    </div>
-                    <div id='y'>
-                        <label>Y</label><br>
-                        <input type="text" maxlength="1" size="2" id="posY">
-                    </div>
+                        <div id='x'>
+                            <label>X</label><br>
+                            <input type="text" maxlength="1" size="2" id="posX">
+                        </div>
+                        <div id='y'>
+                            <label>Y</label><br>
+                            <input type="text" maxlength="1" size="2" id="posY">
+                        </div>
 
-                </div>
-                <div id="botons">
-                    <div id="ins">
-                        <button id="insBoto">Insertar</button>
                     </div>
-                    <div id="abandona">
-                        <button id="abanBoto">Abandonar</button>
+                    <div id="botons">
+                        <div id="ins">
+                            <button id="insBoto">Insertar</button>
+                        </div>
+                        <div id="abandona">
+                            <button id="abanBoto">Abandonar</button>
+                        </div>
+                        <div id="help">
+                            <button id="helpBoto">Help</button>
+                        </div>
                     </div>
                 </div>
             </div>
