--- a/codigo/index.html
+++ b/codigo/index.html
@@ -53,6 +53,11 @@
 
                 <div id="infoPartida"></div>
 
+                <div id="highscore">
+                    <div id="hTitulo"></div>
+                    <div id="hPuntos"></div>
+                </div>
+
                 <div id="global">
 
                     <div id="gTitulo"></div>
